# Vitasys

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: deploy.yml
Authapi/: authentication.py  tasks.py  views.py
Vitasys/: manage.py
Vitasys/Authapi/: admin.py  apps.py  models.py  serializers.py  tasks.py  throttles.py  urls.py  views.py
Vitasys/Authapi/migrations/: 0001_initial.py
Vitasys/Vitasys/: admin.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
Vitasys/appointments/: models.py  serializers.py  tasks.py  throttles.py  urls.py  utils.py  views.py
Vitasys/appointments/management/commands/: create_missing_chatrooms.py
Vitasys/appointments/migrations/: 0001_initial.py
Vitasys/chat_room/: admin.py  apps.py  consumers.py  middleware.py  models.py  pagination.py  serializers.py  signals.py  throttles.py  urls.py  views.py
Vitasys/community/: admin.py  urls.py  views.py
Vitasys/doctor_dashboard/: views.py
Vitasys/doctor_dashboard/migrations/: 0001_initial.py
Vitasys/patient_dashboard/: serializers.py  urls.py  views.py
Vitasys/prescription/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
Vitasys/videocounselling/: apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
appointments/: admin.py  apps.py  consumers.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
chat_room/: consumers.py  routing.py  signals.py  tasks.py  views.py
chat_room/management/commands/: fix_chatrooms.py
chat_room/migrations/: 0001_initial.py
community/: models.py  serializers.py  urls.py  views.py
community/migrations/: 0001_initial.py
doctor_dashboard/: admin.py  models.py  serializers.py  urls.py  views.py
main/main/: settings.py  urls.py
main/users/: admin.py  authentication.py  models.py  serializers.py  urls.py  utils.py  views.py
main/users/migrations/: 0001_initial.py
medtrax/: admin.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
patient_dashboard/: views.py
prescription/: serializers.py  urls.py  views.py
prescription/migrations/: 0001_initial.py
videocounselling/: apps.py  consumers.py  routing.py
